--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,6 +3,9 @@
   <% @articles.each do |article| %>
   <li>
      <%=article.title %>
+     <%= link_to article.title, article_path(article),
+     class: 'article_title', id: "article_#{article.id}" %>
   </li>
   <%end%>
-</ul>     
+</ul>
+<%= link_to "Create a New Article", new_article_path, class: "new_article" %>
