Add Create new view

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -11,9 +11,9 @@
   </p>
   <p>
   <%= f.label :body%><br />
-  <%= f.ext_area :body %>
+  <%= f.text_area :body %>
   </p>
   <p>
     <%=f.submit %>
   </p>
-  <%end%>  
+  <%end%>
